envoy/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: dapr
            # We can remove headers with this property
            # Ref: https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/route/v3/route.proto.html#routeconfiguration
            response_headers_to_remove: ["x-powered-by"]
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: dapr
    connect_timeout: 30s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: dapr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: daprfrontend
                port_value: 8080
